<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hy_dialog_bg_white"
    android:layout_gravity="center_horizontal"
    android:paddingBottom="30dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/ll_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/hy_authentication_quite"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/hy_delect_icon" />
    </RelativeLayout>
   <!-- <View
        android:layout_width="match_parent"
        android:layout_height="1px"/>-->
   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">-->
        <TextView
            android:id="@+id/txt_tips_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:text="@string/u9pay_login_authentication_title_hint"
            android:textColor="@color/hy_text_color_balck2"
            android:textSize="16sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/hy_text_color_white"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/hy_authentication_name_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="7dp"
                android:paddingRight="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="姓"
                    android:textColor="@color/hy_text_color_balck2"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="名"
                    android:textColor="@color/hy_text_color_balck2"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="名:"
                    android:textColor="@color/hy_text_color_balck2"
                    android:textSize="14sp" />


                <com.huiyao.gamecenter.view.HYGame_EditText
                    android:id="@+id/hy_authentication_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="4"
                    android:background="@null"
                    android:hint="@string/u9pay_login_authentication_name_hint"
                    android:paddingLeft="6dp"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:singleLine="true"
                    android:textSize="14.0sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F1EBEB" />

            <LinearLayout
                android:id="@+id/hy_authentication_number_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@null"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="7dp"
                android:paddingRight="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="身份证:"
                    android:textColor="@color/hy_text_color_balck2"
                    android:textSize="14sp" />

                <com.huiyao.gamecenter.view.HYGame_EditText
                    android:id="@+id/hy_authentication_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="4"
                    android:background="@null"
                    android:digits="@string/u9pay_letter_number_account"
                    android:hint="@string/u9pay_login_authentication_number_hint"
                    android:paddingLeft="6dp"
                    android:paddingTop="9dp"
                    android:paddingBottom="9dp"
                    android:singleLine="true"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/txt_autenticate_gift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/u9pay_login_authentication_gift_hint"
            android:textColor="@color/hy_text_color_gray_onclick"
            android:textSize="14sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/btn_authenticate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/hy_radius_bule_bg"
            android:gravity="center"
            android:text="认证"
            android:textColor="@color/hy_text_color_white"
            android:textSize="14sp"
            android:visibility="visible" />
    </LinearLayout>
<!--</LinearLayout>-->
    <!-- <ImageView
         android:id="@+id/hy_authentication_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/hy_authentication_icon"
         android:layout_centerHorizontal="true"/>-->
